force-app/main/default/objects/Documentation__c/Documentation__c.object-meta.xml
<CustomObject>
    <label>Documentation</label>
    <nameField>
        <displayFormat>DN-{0000000000}</displayFormat>
        <label>Record No.</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Documentations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>