force-app/main/default/objects/Documentation__c/fields/Shortage__c.field-meta.xml
<CustomField>
    <fullName>Shortage__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Shortage</label>
    <type>Checkbox</type>
</CustomField>