force-app/main/default/objects/Documentation__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>PIL</fullName>
            </value>
            <value>
                <fullName>Baggage Record</fullName>
            </value>
            <value>
                <fullName>Outstation GD</fullName>
            </value>
            <value>
                <fullName>ED Card</fullName>
            </value>
            <value>
                <fullName>Customs Declaration</fullName>
            </value>
            <value>
                <fullName>Fast Track Card</fullName>
            </value>
            <value>
                <fullName>Seat Map</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
            <value>
                <fullName>Cargo Manifest</fullName>
                <isActive>false</isActive>
                <label>Cargo Manifest</label>
            </value>
            <value>
                <fullName>PM</fullName>
                <isActive>false</isActive>
                <label>PM</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>